--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | LifeInTheStudio</title>
+    <link href="/asssets/images/logos/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Great+Vibes|Nanum+Myeongjo|Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/home.css">
